--- a/bib/references.bib
+++ b/bib/references.bib
@@ -117,6 +117,19 @@
 	pages = {76581--76604},
 }
 
+
+@misc{phd_understanding_2023,
+	title = {Understanding the {BM25} {Ranking} {Algorithm}},
+	url = {https://medium.com/@evertongomede/understanding-the-bm25-ranking-algorithm-19f6d45c6ce},
+	abstract = {Introduction},
+	language = {en},
+	urldate = {2023-12-06},
+	journal = {Medium},
+	author = {Everton Gomede},
+	month = sep,
+	year = {2023},
+}
+
 @article{zhong_building_2020,
 	title = {A building regulation question answering system: {A} deep learning methodology},
 	volume = {46},
