--- a/matter.tex
+++ b/matter.tex
@@ -387,6 +387,7 @@
 % Uncomment to add further chapters
 \include{chapter1.tex}
 \include{chapter2.tex}
+\include{chapter3.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
