some bugs fixed

--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -1,6 +1,24 @@
 
 
 \newabbreviation
+    {ehden}
+    {EHDEN}
+    {European Health Data Evidence Network}
+\newcommand{\ehden}{\gls{ehden}}
+
+\newabbreviation
+    {omopcdm}
+    {OMOP CDM}
+    {Observational Medical Outcomes Partnership Common Data Model}
+\newcommand{\omop}{\gls{omopcdm}}
+
+\newabbreviation
+    {ohdsi}
+    {OHDSI}
+    {Observational Health Data Sciences and Informatics}
+\newcommand{\ohdsi}{\gls{ohdsi}}
+
+\newabbreviation
     {ir}
     {IR}
     {Information Retrieval}
@@ -19,9 +37,9 @@
 \newcommand{\idf}{\gls{idf}}
 
 \newabbreviation
-    {tf-idf}
+    {tfidf}
     {TF-IDF}
-    {Term Frequency - Inverse Document Frenquency}
+    {Term Frequency-Inverse Document Frenquency}
 \newcommand{\tfidf}{\gls{tfidf}}
 
 \newabbreviation
@@ -34,7 +52,7 @@
     {bm25}
     {BM25}
     {Best Matching 25}
-\newcommand{\bm}{\gls{bm}}
+\newcommand{\bm}{\gls{bm25}}
 
 \newabbreviation
     {qa}
@@ -112,7 +130,7 @@
     {ml}
     {ML}
     {Machine Learning}
-\newcommand{\mlearing}{\gls{mlearing}}
+\newcommand{\mlearning}{\gls{ml}}
 
 \newabbreviation
     {rag}
