--- a/chapter1.tex
+++ b/chapter1.tex
@@ -14,9 +14,9 @@ The continuous quest for medical answers and advancements in clinical research, 
 
 However, the implementation of this strategy is not free of obstacles, with the issue of heterogeneity between databases being a prominent challenge. In other words, databases contain different types, formats and/or sources, which are often not compatible with each other. The existence of these diverse data is not very effective, as they cannot be easily shared or integrated with other data.
 
-It is in this context that the OMOP CDM (Observational Medical Outcomes Partnership Common Data Model) and the OHDSI (Observational Health Data Sciences and Informatics) initiative have emerged as good solutions to the problem of heterogeneity and interoperability among clinical medical data. Generally speaking, OMOP CDM is a common data model that establishes a universal standard for representing patient clinical information, allowing for interoperability among disparate databases. The OHDSI initiative is, in turn, an international collaboration composed of researchers and scientists committed to the mission of developing analytical, open-source solutions for an extensive network of medical databases, following systematic analysis of this heterogeneous data.
+It is in this context that the {\omop} and the {\ohdsi} initiative have emerged as good solutions to the problem of heterogeneity and interoperability among clinical medical data. Generally speaking, {\omop} is a common data model that establishes a universal standard for representing patient clinical information, allowing for interoperability among disparate databases. The {\ohdsi} initiative is, in turn, an international collaboration composed of researchers and scientists committed to the mission of developing analytical, open-source solutions for an extensive network of medical databases, following systematic analysis of this heterogeneous data.
 
-With the assistance of OMOP CDM and OHDSI, the challenges of data interoperability are overcome, enabling the discovery of crucial insights for the advancement and improvement of medical studies. Sharing this data presents numerous advantages for researchers, including promoting new fields of study and a significant increase in the impact and recognition of research results.
+With the assistance of {\omop} and {\ohdsi}, the challenges of data interoperability are overcome, enabling the discovery of crucial insights for advancing and improving medical studies. Sharing this data presents numerous advantages for researchers, including promoting new fields of study and a significant increase in the impact and recognition of research results.
 
 
 \section{Motivation}
@@ -26,9 +26,9 @@ With the assistance of OMOP CDM and OHDSI, the challenges of data interoperabili
 
 The search for data sources of interest for a researcher’s study can be complex due to the large number of databases in the community. To face this challenge, some of these databases are grouped into database catalogues. This strategy consists of characterizing the data by aggregating data and metadata.
 
-The EHDEN (European Health Data Evidence Network) portal is an excellent example of a platform that provides a catalogue of medical databases from across Europe. It is a centralized repository that facilitates the discovery of relevant data sources for researchers.
+The {\ehden} portal is an excellent example of a platform that provides a catalogue of medical databases from across Europe. It is a centralized repository that facilitates the discovery of relevant data sources for researchers.
 
-Despite the assistance provided by the catalogue offered by EHDEN, identifying the most suitable databases for a specific study remains a challenge. Thus, to facilitate search in the catalogue, Networkdashboards has emerged, offering statistical and aggregated information about the databases available on the EHDEN network. With this tool, researchers can filter the most suitable databases for their research needs and make more informed decisions.
+Despite the assistance provided by the catalogue offered by {\ehden}, identifying the most suitable databases for a specific study remains a challenge. Thus, to facilitate search in the catalogue, Networkdashboards has emerged, offering statistical and aggregated information about the databases available on the {\ehden} network. With this tool, researchers can filter the most suitable databases for their research needs and make more informed decisions.
 
 Even with all this help, choosing the most appropriate databases is difficult and time-consuming, making it difficult to achieve the ideal search desired for the study. The challenge to be addressed is to assist a medical researcher in reaching the ideal search based on the protocol and parameters of their study.
 
