--- a/matter.tex
+++ b/matter.tex
@@ -363,13 +363,14 @@
 }
 
 % Print Glossary
-\renewcommand{\glossaryname}{}
-{\printunsrtglossaries}
-
-% Print Glossary
 % {\small\include{glossary}}
 
+% Print Glossary (glossaries-extra package)
+\renewcommand{\glossaryname}{}
+% {\printunsrtglossaries}
+
 \include{abbreviations.tex}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Main document starts here
