--- a/chapter3.tex
+++ b/chapter3.tex
@@ -5,8 +5,9 @@ For this thesis work, after an extensive literature review on crucial concepts, 
 
 The Gantt diagram above shows the work proposal for the following months. Most of the work these last few months has been necessary for exploring the state-of-the-art, focusing on reading and writing it up. In terms of development, I have so far developed a prototype of a conversational interface, and I have started to implement and test a {\bm} method to retrieve the best databases for a giving query. It is important to note that it is in a very initial stage.
 
+
 \begin{figure}[ht]
-    \includegraphics[width=8cm]{figs/chapter2/rag_workflow.png}
+    \includegraphics[width=4cm]{figs/chapter3/diagrama_gantt_vert.png}
     \centering
-    \caption{imagem provisória !!!}
+    \caption{Proposal thesis work in Gantt Diagram}
 \end{figure}
