--- a/chapter2.tex
+++ b/chapter2.tex
@@ -347,6 +347,9 @@ The following figure shows the workflow of a {\rag}. This model aims to retrieve
 
 \section{Interactive Query Builder}
 
+A query builder refers to constructing a query according to the user preferences. This query could be in different formats, such as SQL [Domain Specific Query Generation from Natural Language Text] and RDF [A Front-End Approach for User Query Generation and Information Retrieval in the SemanticLIFE Framework]. 
+
+It is important to note that there aren't many cases of query builder documentation.
 
 
 
