--- a/chapter1.tex
+++ b/chapter1.tex
@@ -24,11 +24,11 @@ With the assistance of {\omop} and {\ohdsi}, the challenges of data interoperabi
 % 2º Problema: como é que eu escolho as bd de interesse nesses catalogues? Alguem criou uma forma de caracterizar essa BDs usando informações estatisticas e agregadas (Networkdashboards)
 % 3º Problema: Ok isso é giro, mas algumas bd/conceitos são dispensos sendo dificil chegar à query que se pretende para o estudo. e este é o desafio
 
-The search for data sources of interest for a researcher’s study can be complex due to the large number of databases in the community. To face this challenge, some of these databases are grouped into database catalogues. This strategy consists of characterizing the data by aggregating data and metadata.
+The search for data sources of interest for a researcher's study can be complex due to the large number of databases in the community. Some of these databases are grouped into catalogs to face this challenge. This strategy consists of characterizing the data by aggregating data and metadata.
 
-The {\ehden} portal is an excellent example of a platform that provides a catalogue of medical databases from across Europe. It is a centralized repository that facilitates the discovery of relevant data sources for researchers.
+The {\ehden} portal is an excellent example of a platform that provides a catalog of medical databases from across Europe. It is a centralized repository that facilitates the discovery of relevant data sources for researchers.
 
-Despite the assistance provided by the catalogue offered by {\ehden}, identifying the most suitable databases for a specific study remains a challenge. Thus, to facilitate search in the catalogue, Networkdashboards has emerged, offering statistical and aggregated information about the databases available on the {\ehden} network. With this tool, researchers can filter the most suitable databases for their research needs and make more informed decisions.
+Despite the assistance provided by the catalog offered by {\ehden}, identifying the most suitable databases for a specific study remains a challenge. Thus, to facilitate search in the catalog, Networkdashboards has emerged, offering statistical and aggregated information about the databases available on the {\ehden} network. With this tool, researchers can filter the most suitable databases for their research needs and make more informed decisions.
 
 Even with all this help, choosing the most appropriate databases is difficult and time-consuming, making it difficult to achieve the ideal search desired for the study. The challenge to be addressed is to assist a medical researcher in reaching the ideal search based on the protocol and parameters of their study.
 
@@ -51,9 +51,9 @@ The main objective of this work is to develop a conversational query builder to 
 To answer this question, the work can be addressed by focusing on different aspects, namely by dividing it into three stages:
 
 \begin{enumerate}
-    \item Study of state-of-the-art, namely: i) Information retrieval systems, ii) Generative-based conversational virtual agents, and iii) Interactive query builder;
+    \item Study of state-of-the-art, namely: i) Information retrieval systems, ii) Large Language Models, iii) Generative-based conversational virtual agents, and iv) Interactive query builder;
     \item Developed a chat-like search engine to help discover the best databases for a study;
-    \item Enhance the engine to collect additional information to provide a query as outcome. 
+    \item Enhance the engine to collect additional information to provide a query as an outcome. 
 \end{enumerate}
 
 
